tests/object_freeze/object_freeze.exp
Error: object_freeze.js:4
  4: foo.bar = '23456'; // error
     ^^^^^^^ assignment of property `bar`. Mutation not allowed on
  4: foo.bar = '23456'; // error
     ^^^ frozen object literal

Error: object_freeze.js:6
  6: Object.assign(foo, {bar: '12345'}); // error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ property `bar` of object literal. Mutation not allowed on
  6: Object.assign(foo, {bar: '12345'}); // error
                   ^^^ frozen object literal

Error: object_freeze.js:10
 10: bliffl.bar = '23456'; // error
     ^^^^^^^^^^ assignment of property `bar`. Mutation not allowed on
 10: bliffl.bar = '23456'; // error
     ^^^^^^ frozen object literal

Error: object_freeze.js:11
 11: bliffl.baz = 3456; // error
     ^^^^^^^^^^ assignment of property `baz`. Mutation not allowed on
 11: bliffl.baz = 3456; // error
     ^^^^^^ frozen object literal

Error: object_freeze.js:12
 12: bliffl.corge; // error
            ^^^^^ Cannot get `bliffl.corge` because property `corge` is missing in frozen object literal [1].
  References:
    9: var bliffl = Object.freeze({bar: '12345', ...baz});
                                  ^^^^^^^^^^^^^^^^^^^^^^ [1]: frozen object literal

Error: object_freeze.js:13
 13: bliffl.constructor = baz; // error
     ^^^^^^^^^^^^^^^^^^ assignment of property `constructor`. Mutation not allowed on
 13: bliffl.constructor = baz; // error
     ^^^^^^ frozen object literal

Error: object_freeze.js:14
 14: bliffl.toString = function() {}; // error
     ^^^^^^^^^^^^^^^ assignment of property `toString`. Mutation not allowed on
 14: bliffl.toString = function() {}; // error
     ^^^^^^ frozen object literal

Error: object_freeze.js:20
 20: var xx : { x: number } = Object.freeze({ x: "error" })
                                                 ^^^^^^^ Cannot assign `Object.freeze(...)` to `xx` because in property `x`, string [1] is incompatible with number [2].
  References:
   20: var xx : { x: number } = Object.freeze({ x: "error" })
                                                   ^^^^^^^ [1]: string
   20: var xx : { x: number } = Object.freeze({ x: "error" })
                     ^^^^^^ [2]: number


Found 8 errors
